# hip-compression-toolkit

./: .gitignore  CMakeLists.txt  NOTICES.md  README.md  README_AMD.md
benchmarks/: CMakeLists.txt  README.md  benchmark_ans_chunked.cu  benchmark_bitcomp_chunked.cu  benchmark_cascaded_chunked.cu  benchmark_common.h  benchmark_gdeflate_chunked.cu  benchmark_lz4_chunked.cu  benchmark_snappy_chunked.cu  benchmark_template_chunked.cuh  benchmark_zfp.hip
cmake/: arcto-config.cmake.amd.in  arcto-config.cmake.nvidia.in
docs/: ZFP_INTEGRATION.md
experimental/: README.md
include/: arcto.h  arcto.hpp
include/arcto/: ans.h  ans.hpp  arctoManager.hpp  arctoManagerFactory.hpp  bitcomp.h  bitcomp.hpp  cascaded.h  cascaded.hpp  gdeflate.h  gdeflate.hpp  lz4.h  lz4.hpp  shared_types.h  snappy.h  snappy.hpp
include/hipcomp/: hipcompManagerFactory.hpp  zfp.h
results/data_quality/: rsf_analysis_metadata.json  rsf_summary_analysis.csv  rsf_timestep_analysis.csv
scripts/: RSF_CONVERSION_GUIDE.md  analyze_rsf_data_quality.py  benchmark.sh  build_for_arch.sh  build_singularity.sh  compare_features_mi300x.py  compare_platforms.py  compare_results.sh  compare_two_features.py  compare_with_without_optimizations.sh  complete_viz_suite.py  convert_rsf_to_binary.py  deploy_benchmarks.sh  faceted_charts.py  generate_testdata.sh  portable_benchmark.sh  prepare_rsf_testdata.sh  run_benchmarks_auto.sh  run_experiments.sh  run_singularity.sh  singularity_entrypoint.sh  visualize_advanced.py  visualize_feature2_rsf.py  visualize_feature2_rsf_copy.py  visualize_results.py
singularity/: defhip_benchmark.def
snappy/: snappy_example.py
src/: BitPackGPU.h  BitPackGPU.hip  CMakeLists.txt  CascadedKernels.hiph  Check.cpp  Check.h  DeltaGPU.h  DeltaGPU.hip  HipUtils.h  HipUtils.hip  LZ4Kernels.hiph  LZ4Types.h  RunLengthEncodeGPU.h  RunLengthEncodeGPU.hip  TempSpaceBroker.cpp  TempSpaceBroker.h  amd_optimizations.h  arcto_api.cpp  common.h  device_functions.hiph  device_types.h  hipcomp_api.cpp  type_macros.h  unpack.h
src/arcto_common_deps/: hlif_shared.hiph  hlif_shared_types.hpp
src/highlevel/: ANSManager.hpp  BatchManager.hpp  BitcompManager.hip  BitcompManager.hpp  CascadedHlifKernels.h  CascadedHlifKernels.hip  CascadedManager.hpp  CompressionConfigs.cpp  CompressionConfigs.hpp  GdeflateBatchManager.hpp  GdeflateManager.cpp  LZ4HlifKernels.h  LZ4HlifKernels.hip  LZ4Manager.hpp  ManagerBase.hpp  PinnedPtrs.hpp  SnappyHlifKernels.h  SnappyHlifKernels.hip  SnappyManager.hpp  arctoManagerFactory.cpp  hipcompManagerFactory.cpp
src/highlevel/test/: CMakeLists.txt  PinnedPtrPool_test.cpp
src/lowlevel/: BitcompBatch.hip  CascadedBatch.hip  LZ4Batch.cpp  LZ4CompressionKernels.h  LZ4CompressionKernels.hip  SnappyBatch.cpp  SnappyBatchKernels.h  SnappyBatchKernels.hip  ansBatch.cpp  gdeflateBatch.cpp  gdeflateKernels.h  gdeflateKernels.hip
src/lowlevel/test/: CMakeLists.txt
src/snappy/: compression.hiph  compression_state.hiph  config.h  decompression.hiph  decompression_decode.hiph  decompression_decode_strategies.hiph  decompression_decode_warp_scans.hiph  decompression_prefetch.hiph  decompression_process.hiph  decompression_state.hiph  symbol.hiph  types.h
src/test/: BitPackGPU_test.cpp  CMakeLists.txt  DeltaGPU_test.cpp  HipUtils_test.cpp  RunLengthEncodeGPU_test.cpp  SnappyLargeTokens_test.cpp  TempSpaceBroker_test.cpp
src/zfp/: ZfpBatch.cpp  ZfpBatchGPU.cpp
tests/: CMakeLists.txt  test_ans_batch_c_api.c  test_batch_c_api.h  test_bitcomp.cpp  test_bitcomp_batch.cpp  test_bitcomp_batch_c_api.c  test_cascaded.cpp  test_cascaded_batch.cpp  test_cascadedbatch_c_api.c  test_common.h  test_gdeflate.cpp  test_gdeflate_batch_c_api.c  test_lz4.cpp  test_lz4batch_c_api.c  test_random_lz4.cpp  test_snappy_app.cpp  test_snappy_batch_c_api.c
